<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutWrapper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.phdum.pdumaresq_b51_a02.PlayGame"
    tools:showIn="@layout/activity_play_game"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/layoutLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/game_margin"
        android:layout_marginStart="@dimen/game_margin"
        android:layout_marginTop="@dimen/game_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/game_button_size"
            android:text="@string/game_time"/>

        <TextView
            android:id="@+id/txtNumCorrect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/game_button_size"
            android:text="@string/game_correct" />

        <TextView
            android:id="@+id/txtNums"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/game_button_size"
            android:text="" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/game_margin"
        android:layout_marginEnd="@dimen/game_margin"
        android:layout_marginTop="@dimen/game_margin"
        android:layout_weight="2">
        <TableRow android:layout_width="match_parent">
            <EditText
                android:id="@+id/edtAnswer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textSize="@dimen/game_button_size"
                android:enabled="false"
                android:textColor="@color/game_black" />

            <Button
                android:id="@+id/btnBackspace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/game_button_size"
                android:layout_weight="1"
                android:text="@string/game_back"/>

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:visibility="gone"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_reset"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent">
            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_9" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent">
            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent">
            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent">
            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_0" />

            <Button
                android:id="@+id/btnNeg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_neg" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/game_button_size"
                android:text="@string/game_eq"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
